build: fix release & bump scripts